aux_source_directory(. DIR_LIB_SRCS)
aux_source_directory(base DIR_LIB_SRCS)
aux_source_directory(rtmp DIR_LIB_SRCS)
aux_source_directory(rtmp/amf DIR_LIB_SRCS)
aux_source_directory(http DIR_LIB_SRCS)
aux_source_directory(flv DIR_LIB_SRCS)
aux_source_directory(demux DIR_LIB_SRCS)
aux_source_directory(mpegts DIR_LIB_SRCS)
aux_source_directory(hls DIR_LIB_SRCS)
aux_source_directory(webrtc DIR_LIB_SRCS)
aux_source_directory(rtp DIR_LIB_SRCS)
add_library (mmedia ${DIR_LIB_SRCS})
target_link_libraries(mmedia base network crypto ssl srtp2 faad.a opus.a)
add_subdirectory(tests)